fixed white space issue

--- a/styles.css
+++ b/styles.css
@@ -8,6 +8,10 @@
     src: url('/fonts/Terrasick.ttf');
 }
 
+body {
+  margin: 0;
+  padding: 0;
+}
 
 /* Top Banner */
 .top-banner > img{
@@ -22,13 +26,9 @@
 footer {
   background-color: #220003;
   padding: 20px 0;
+  width: 100%;
   font-size: 14px;
   color: #fff;
-}
-
-#footer-container{
-  margin-left: 50px;
-  margin-right: 50px;
 }
 
 footer ul {
